--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bulma": "^0.9.2",
     "core-js": "^3.6.5",
+    "trae": "^1.4.2",
     "vue": "^2.6.11"
   },
   "devDependencies": {
